--- a/styles.css
+++ b/styles.css
@@ -304,7 +304,6 @@ header svg {
 	width: 10%;
 }
 
-/* Стили кнопки закрытия модального окна */
 .close {
 	color: #aaa;
 	float: right;
@@ -789,6 +788,135 @@ p {
 	opacity: 0.9;
 }
 
+.carousel-wrapper {
+	position: fixed;
+	visibility: hidden;
+	display: block;
+	z-index: 1000;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.4);
+}
+.carousel {
+	display: block;
+	position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 45rem;
+	margin: auto;
+  width: 90rem;
+	visibility: hidden;
+}
+.carousel__image {
+  object-fit: cover;
+  width: 100%;
+}
+.carousel__track-container {
+  background-color: gray;
+  height: 100%;
+	width: 90%;
+	margin: auto;
+  position: relative;
+  overflow: hidden;
+}
+.carousel__track {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  height: 100%;
+  transition: transform 400ms ease;
+}
+.carousel__slide {
+  bottom: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.carousel img{
+	width: 100%;
+}
+
+.carousel__button {
+  cursor: pointer;
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.0);
+  border: unset;
+  padding: 0;
+  z-index: 100;
+  border-radius: 50%;
+  padding: 7px;
+  outline: none;
+}
+.carousel__button--right {
+	position: absolute;
+	top: 50%;
+	right: -3rem;
+}
+.carousel__button--left {
+	position: absolute;
+	top: 50%;
+	left: -3rem;
+}
+.carousel__button svg {
+  width: 2rem;
+  height: 2rem;
+  display: block;
+}
+.carousel__nav {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+.carousel__indicator {
+  border: unset;
+  border-radius: 50%;
+  cursor: pointer;
+  width: 0.7rem;
+  height: 0.7rem;
+  background-color: rgb(182, 182, 182, 0.6);
+  padding: 0;
+  margin: 0 5px;
+  outline: none;
+}
+.carousel__indicator.current-slide {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.carousel-close{
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	width: 3rem;
+	height: 3rem;
+	z-index: 5;
+	background-color: rgba(0, 0, 0, 0);
+	border: unset;
+	outline: none;
+	cursor: pointer;
+	padding: 0;
+  margin: 0 5px;
+}
+.carousel-close svg{
+	width: 2rem;
+}
+
+/* .carousel-background{
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	background: rgba(0, 0, 0, 0.6);
+	width: 100%;
+	height: 100%;
+} */
+
+
 /* Steps */
 .steps {
 	padding-top: 2%;
@@ -1079,127 +1207,3 @@ footer .offer {
 }
 
 /*Media*/
-
-.carousel-wrapper {
-	position: fixed;
-	visibility: hidden;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.4);
-}
-.carousel {
-	position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  height: 45rem;
-	margin: auto;
-  width: 90rem;
-}
-.carousel__image {
-  object-fit: cover;
-  width: 100%;
-}
-.carousel__track-container {
-  background-color: gray;
-  height: 100%;
-	width: 90%;
-	margin: auto;
-  position: relative;
-  overflow: hidden;
-}
-.carousel__track {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  height: 100%;
-  transition: transform 400ms ease;
-}
-.carousel__slide {
-  bottom: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-.carousel img{
-	width: 100%;
-}
-
-.carousel__button {
-  cursor: pointer;
-  top: 50%;
-  transform: translateY(-50%);
-  position: absolute;
-  background-color: rgba(255, 255, 255, 0.0);
-  border: unset;
-  padding: 0;
-  z-index: 100;
-  border-radius: 50%;
-  padding: 7px;
-  outline: none;
-}
-.carousel__button--right {
-	position: absolute;
-	top: 50%;
-	right: -3rem;
-}
-.carousel__button--left {
-	position: absolute;
-	top: 50%;
-	left: -3rem;
-}
-.carousel__button svg {
-  width: 2rem;
-  height: 2rem;
-  display: block;
-}
-.carousel__nav {
-  display: flex;
-  justify-content: center;
-  margin-top: 16px;
-}
-.carousel__indicator {
-  border: unset;
-  border-radius: 50%;
-  cursor: pointer;
-  width: 0.7rem;
-  height: 0.7rem;
-  background-color: rgb(182, 182, 182, 0.6);
-  padding: 0;
-  margin: 0 5px;
-  outline: none;
-}
-.carousel__indicator.current-slide {
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.carousel-close{
-	position: absolute;
-	top: 1rem;
-	right: 1rem;
-	width: 3rem;
-	height: 3rem;
-	z-index: 5;
-	background-color: rgba(0, 0, 0, 0);
-	border: unset;
-	outline: none;
-	cursor: pointer;
-	padding: 0;
-  margin: 0 5px;
-}
-.carousel-close svg{
-	width: 2rem;
-}
-
-.carousel-background{
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -1;
-	background: rgba(0, 0, 0, 0.6);
-	width: 100%;
-	height: 100%;
-}
