--- a/styles.css
+++ b/styles.css
@@ -190,21 +190,23 @@ header svg {
 	color: #fff;
 	padding: 18px 50px 18px 50px;
 	font-size: 1.2rem;
-	cursor: pointer;
 	font-weight: 500;
+	outline: none;
 	cursor: pointer;
 }
+
 
 .call_me {
 	display: none;
 	position: fixed;
-	z-index: 10;
+	z-index: 9999;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
 	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.4);
+	background-color: rgba(0, 0, 0, 0.8);
+	backdrop-filter: blur(0.5rem);
 }
 
 .call-me-content {
@@ -215,91 +217,77 @@ header svg {
 	width: 60%;
 }
 
+.main__form-wrapper h2 {
+	padding: 4rem 0 2rem 0;
+}
 
-.sod {
+.main__form-wrapper p {
+	padding: 0 10rem 2rem 10rem;
+}
+
+.call-me__form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
+	padding-left: 2em;
+	padding-right: 2em;
+	padding-bottom: 0.4em;
+}
+
+.input-wrap {
 	display: flex;
 	align-items: center;
-	flex-direction: column;
-}
-
-.sod h2 {
-	padding: 3%;
-}
-
-.sod button {
-	margin: 6%;
-	padding: 4% 7% 4% 7%;
-	width: 300px;
-	align-self: center;
-	background-color: var(--primary-color);
-	font-size: 1.2rem;
-	font-weight: 500;
-	border-radius: 20px;
-	color: white;
-	cursor: pointer;
+	justify-content: center;
+	gap: 0.5em;
+	border-radius: 1rem;
+	padding: 1.5rem;
 	border: none;
-}
-
-.sod button:hover {
-	background-color: var(--light-color);
-	color: var(--contrast-text-color);
-}
-
-.sod p {
-	padding: 0 25% 1% 25%;
-}
-
-.sod input {
-	position: relative;
-	align-self: center;
-	width: 600px;
-	padding: 4%;
-	margin-top: 5%;
-	background-color: var(--primary-color);
-	border-radius: 20px;
-	color: var(--contrast-text-color);
-	box-shadow: none;
 	outline: none;
-  border:none;
+	color: white;
+	background-color: var(--secondary-color);
+	width: 70%;
 }
 
-.sod input:focus::placeholder {
-  color: transparent;
+.input-icon {
+	height: 1.3em;
+	width: 1.3em;
+	fill: white;
 }
 
-.sod input:hover {
+.input-field {
+	background: none;
+	border: none;
 	outline: none;
-}
-.sod input[type^="tel"]{
-	padding-left: 12%;
-}
-
-.sod form {
-	display: flex;
-	flex-direction: column;
-	position: relative;
-}
-.phone-call{
-	position: relative;
+	margin: 0;
+	width: 100%;
+	color: #d3d3d3;
 }
 
-.phone-call_phone-icon{
-	position: absolute;
-	z-index: 15;
-	bottom: 47%;
-	right: 90%;
-}
-.phone-call_phone-preffics{
-	color: var(--contrast-text-color);
-	position: absolute;
-	bottom: 48.2%;
-	z-index: 15;
-	right: 89%;
+.call-for__btn {
+	border-radius: 1rem;
+	padding: 1.2rem 2.4rem;
+	background: var(--secondary-color);
+	color: #fff;
+	margin: 1rem 0 2rem 0;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	font-size: 1.2rem;
+	font-weight: 400;
 }
 
-.phone-call_phone-icon svg{
-	width: 30%;
+.call-for__btn:hover {
+	color: var(--noncontrast-text-color);
+	background: var(--light-color);
 }
+
+.call-for__btn:focus {
+	color: var(--noncontrast-text-color);
+	background: var(--light-color);
+	box-shadow: 0 0 0 4px #cbd6ee;
+}
+
 .close svg {
 	width: 10%;
 }
@@ -323,6 +311,8 @@ header svg {
 }
 
 .namedesc {
+	font-weight: 800;
+	font-size: 1.2rem;
 	padding: 0 0 25px 0;
 	color: #000;
 }
@@ -333,7 +323,6 @@ header svg {
 }
 
 .main-button:focus {
-	outline: none;
 	box-shadow: 0 0 0 4px #cbd6ee;
 }
 
@@ -495,7 +484,7 @@ header svg {
 }
 
 .pint a {
-	color: var(--contrast-text-color);
+	color: var(--noncontrast-text-color);
 }
 
 .pint a:hover {
@@ -561,6 +550,7 @@ header svg {
 	grid-template-columns: 2fr 1fr;
 	gap: 10px;
 	align-items: center;
+	position: relative;
 }
 
 .el-3,
@@ -572,6 +562,7 @@ header svg {
 	grid-template-columns: 1fr 1fr;
 	gap: 10px;
 	align-items: center;
+	position: relative;
 }
 
 .price ul,
@@ -620,34 +611,87 @@ p {
 	margin: auto;
 }
 
-.price .icon svg {
-	width: 24px;
+.tooltip-anchor svg {
+	width: 1.5rem;
 	display: flex;
 	stroke: #3f3f3f;
 }
 
-.price .icon {
+.tooltip-anchor {
+	width: 3rem;
 	padding: 5%;
 	display: flex;
 	cursor: pointer;
 }
 
-
-
-.serv:hover {
-	transform: translateX(1rem);
-	opacity: 0.8;
+.tooltip {
+	display: none;
+	position: absolute;
+	top: 50%;
+	right: 37%;
+	transform: translateY(-50%);
+	background-color: #fcfcfc;
+	box-shadow: -0.3rem 0.3rem 1rem rgba(0, 0, 0, 0.2);
+	padding: 10px;
+	transition: opacity 2s ease-in-out;
+	width: 80%;
+	z-index: 100;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
+
+
+.tooltip ul {
+	list-style: none;
+	margin: 0;
+	padding: 0 0 0 1rem;
+	column-count: 2;
+	column-gap: 1rem;
+}
+
+.tooltip li {
+	margin: 0.5rem 0;
+}
+
+/* .price-sensention */
+
+.price-new {
+	margin: 3rem 0 0 0;
+	height: auto;
+	background: var(--primary-color);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.price-sensention {
+	line-height: 3rem;
+	font-size: 2.5rem;
+	font-weight: 800;
+	color: #fff;
+	padding: 5rem;
+}
+
+.price-anchor {
+	line-height: 3rem;
+	font-size: 2.5rem;
+	font-weight: 800;
+	color: #fff;
+}
+
+.price-anchor:hover {
+	color: orange;
+}
 
 /* VR360 */
 
 .vr360 {
-	margin-top: 5%;
+	margin-top: 1%;
 	margin-bottom: 5%;
 	display: grid;
 	grid-template-rows: 1fr 10fr 1fr;
-	padding: 3% 0 0 0;
+	padding: 2% 0 0 0;
 }
 
 .vr360 object {
@@ -708,7 +752,7 @@ p {
 }
 
 /* Portfolio */
-.portfolio{
+.portfolio {
 	height: auto;
 	padding: 1% 0 2% 0;
 }
@@ -726,7 +770,7 @@ p {
 	flex-wrap: wrap;
 }
 
-.project-a {
+.project {
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -743,7 +787,7 @@ p {
 	border: none;
 }
 
-.project-a img {
+.project img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -751,7 +795,7 @@ p {
 }
 
 
-.project-a img:hover{
+.project img:hover {
 	filter: brightness(100%);
 }
 
@@ -783,139 +827,126 @@ p {
 .project-icon {
 	position: absolute;
 	right: 7%;
-	bottom: 15%;
-	width: 10%;
+	bottom: 20%;
+	width: 8%;
 	opacity: 0.9;
 }
 
-.carousel-wrapper {
+.portfolio__modal {
+	display: none;
 	position: fixed;
-	visibility: hidden;
-	display: block;
-	z-index: 1000;
+	z-index: 9999;
+	left: 0;
+	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.4);
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.8);
+	backdrop-filter: blur(0.5rem);
 }
-.carousel {
-	display: block;
-	position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  height: 45rem;
-	margin: auto;
-  width: 90rem;
-	visibility: hidden;
-}
-.carousel__image {
-  object-fit: cover;
-  width: 100%;
-}
-.carousel__track-container {
-  background-color: gray;
-  height: 100%;
-	width: 90%;
-	margin: auto;
-  position: relative;
-  overflow: hidden;
-}
-.carousel__track {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  height: 100%;
-  transition: transform 400ms ease;
-}
-.carousel__slide {
-  bottom: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-.carousel img{
+.portfolio__modal-content{
 	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	align-items: center;
+	justify-content: center;
+}
+.portfolio__slider{
+	display: flex;
+	flex-direction: row;
+	gap: 3rem;
+	justify-content: center;
+	align-items: center;
 }
 
-.carousel__button {
-  cursor: pointer;
-  top: 50%;
-  transform: translateY(-50%);
-  position: absolute;
-  background-color: rgba(255, 255, 255, 0.0);
-  border: unset;
-  padding: 0;
-  z-index: 100;
-  border-radius: 50%;
-  padding: 7px;
-  outline: none;
-}
-.carousel__button--right {
-	position: absolute;
-	top: 50%;
-	right: -3rem;
-}
-.carousel__button--left {
-	position: absolute;
-	top: 50%;
-	left: -3rem;
-}
-.carousel__button svg {
-  width: 2rem;
-  height: 2rem;
-  display: block;
-}
-.carousel__nav {
-  display: flex;
-  justify-content: center;
-  margin-top: 16px;
-}
-.carousel__indicator {
-  border: unset;
-  border-radius: 50%;
-  cursor: pointer;
-  width: 0.7rem;
-  height: 0.7rem;
-  background-color: rgb(182, 182, 182, 0.6);
-  padding: 0;
-  margin: 0 5px;
-  outline: none;
-}
-.carousel__indicator.current-slide {
-  background-color: rgba(0, 0, 0, 0.7);
+.portfolio__slider-container {
+	display: flex;
+	justify-content: center;
+	width: 80rem;
+	height: 45rem;
+	position: relative;
+	overflow: hidden;
 }
 
-.carousel-close{
+.slider-slide img {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+}
+
+.portfolio__modal-close{
+	outline: none;
+	background: none;
+	border: none;
 	position: absolute;
 	top: 1rem;
 	right: 1rem;
-	width: 3rem;
-	height: 3rem;
-	z-index: 5;
-	background-color: rgba(0, 0, 0, 0);
-	border: unset;
-	outline: none;
 	cursor: pointer;
-	padding: 0;
-  margin: 0 5px;
+	width: 4rem;
+	height: 4rem;
 }
-.carousel-close svg{
+.portfolio__modal-close-icon{
+	width: 2.5rem;
+}
+.slider-slide{
+	flex: 0 0 100%;
+  position: absolute;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+.slider-slide.active{
+  opacity: 1;
+}
+.slider-slide.active-out {
+  opacity: 0;
+}
+
+.portfolio__carousel-prev{
+	outline: none;
+	background: none;
+	border: none;
+	cursor: pointer;
+	width: 4rem;
+	height: 4rem;
+}
+
+.portfolio__carousel-next{
+	outline: none;
+	background: none;
+	border: none;
+	cursor: pointer;
+	width: 4rem;
+	height: 4rem;
+}
+
+.portfolio__forward{
 	width: 2rem;
+	cursor: pointer;
 }
 
-/* .carousel-background{
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -1;
-	background: rgba(0, 0, 0, 0.6);
-	width: 100%;
-	height: 100%;
-} */
+.portfolio__prev{
+	width: 2rem;
+	cursor: pointer;
+}
 
+.slider__dots{
+	display: flex;
+	justify-content: center;
+	margin-top: 0.5rem;
+}
+.slider__dot {
+	width: 0.7rem;
+	height: 0.7rem;
+	margin: 0 0.5rem;
+	border-radius: 50%;
+	background-color: #424242;
+	cursor: pointer;
+}
+.slider__dot.active {
+	background-color: #ffffff;
+}
 
 /* Steps */
 .steps {
@@ -924,7 +955,7 @@ p {
 	box-sizing: border-box;
 }
 
-.steps h6 {
+.steps__title {
 	font-size: 1.5rem;
 	margin-left: 2%;
 	font-weight: 400;
@@ -1006,6 +1037,8 @@ footer {
 	gap: 5%;
 }
 
+
+
 footer .contacts {
 	background-color: var(--primary-color);
 }
@@ -1037,109 +1070,88 @@ footer a:hover {
 	color: var(--noncontrast-text-color);
 }
 
-footer form {
-	background-color: #100F18;
-	border-radius: 20px;
-	margin: 0 0 13% 3%;
-	width: 45vw;
+.footer__form {
 	display: flex;
 	flex-direction: column;
-	position: relative;
-}
-
-footer .formname {
-	font-weight: 600;
-	font-size: 1.5rem;
-	padding: 5% 0 0 5%;
-	color: #fff;
-}
-
-footer .notion {
-	font-weight: 400;
-	font-size: 1rem;
-	padding: 0.9% 5% 4% 5%;
-	color: var(--noncontrast-text-color);
-}
-
-.zayavka button {
-	position: absolute;
-	right: 21%;
-	bottom: 12.5%;
-	padding: 2% 4% 2% 4%;
-	background-color: #1B1A22;
-	font-size: 1.1rem;
-	border-radius: 2rem;
-	color: white;
-	cursor: pointer;
-	border: none;
-}
-
-.zayavka button:hover {
-	background-color: #17161d;
-	color: var(--contrast-text-color);
-} 
-
-.zayavka input {
-	position: relative;
-	margin: 0 0 4% 5%;
-	background-color: var(--primary-color);
+	background-color: var(--secondary-color);
 	border-radius: 3rem;
-	font-size: 1.1rem;
-	color: var(--contrast-text-color);
-	box-shadow: none;
-	outline: none;
-  border:none;
-	line-height: 4.5rem;
-	height: 5rem;
+	padding: 3rem;
+	margin-bottom: 10rem;
 }
 
-.zayavka input[type^="text"]{
+.footer__form-title {
+	color: #fff;
+	font-size: 1.5rem;
+	font-weight: 700;
+	padding: 0 0 0 1rem;
+}
+
+.footer__form-notion {
+	color: var(--noncontrast-text-color);
+	padding: 1rem 0 0 1rem;
+}
+
+.footer__field {
+	background: none;
+	border: none;
+	outline: none;
+	width: 100%;
+	color: #d3d3d3;
+}
+
+.footer__icon-input {
+	width: 3rem;
+	fill: white;
+}
+
+.name-field {
+	height: 4rem;
+}
+
+.name-wrapper {
 	width: 50%;
-	padding-left: 3%;
-}
-.zayavka input[type^="tel"]{
-	width: 76%;
-	padding-left: 10%;
 }
 
-.zayavka input:focus::placeholder {
-  color: transparent;
+.phone-wrapper {
+	width: 80%;
 }
 
-.zayavka input:hover {
+.footer__input-wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 0.5em;
+	padding: 0.5rem 0.8rem 0.5rem 2rem;
+	border: none;
 	outline: none;
+	color: white;
+	line-height: 5.2rem;
+	background-color: var(--primary-color);
+	margin-top: 2rem;
+	border-radius: 4rem;
 }
 
-.zayavka-phone{
-	position: relative;
+.footer__form-btn {
+	border: none;
+	outline: none;
+	background: #1B1A22;
+	color: #fff;
+	border-radius: 3rem;
+	font-size: 1.2rem;
+	font-weight: 500;
+	padding: 1.3rem 2.2rem;
+	width: 55%;
 }
 
-.zayavka-phone__preffics{
-	font-size: 1.1rem;
-	color: var(--contrast-text-color);
-	position: absolute;
-	bottom: 17%;
-	z-index: 15;
-	left: 12%;
-}
-.zayavka-phone__icon{
-	color: var(--contrast-text-color);
-	position: absolute;
-	bottom: 15%;
-	z-index: 15;
-	left: 8%;
-}
-
-.zayavka-phone__icon svg{
-	width: 8%;
-}
-
-
-footer h6 {
+.title-description-heading {
 	color: var(--noncontrast-text-color);
 	font-weight: 300;
 	font-size: 1.1rem;
 	padding: 0 0 1vw 0;
+}
+
+.foot-1 {
+	background: var(--primary-color);
 }
 
 footer ul li {
@@ -1166,6 +1178,7 @@ footer hr {
 footer .footeer {
 	display: flex;
 	flex-direction: row;
+	gap: 27%;
 	margin: 0;
 	background-color: var(--primary-color);
 }
@@ -1182,7 +1195,7 @@ footer .politics {
 	display: flex;
 	flex-direction: row;
 	justify-self: center;
-	margin-left: 27%;
+	;
 	margin-bottom: 0;
 	white-space: nowrap;
 	overflow: hidden;
@@ -1196,7 +1209,6 @@ footer .offer {
 	display: flex;
 	flex-direction: row;
 	justify-self: flex-end;
-	margin-left: 30%;
 	margin-bottom: 0;
 	white-space: nowrap;
 	overflow: hidden;
