--- a/styles.css
+++ b/styles.css
@@ -2909,10 +2909,9 @@ footer hr {
 	.scroll-up svg {
 		width: 6rem;
 	}
-
 }
 
-@media screen and (min-width: 1023px) and (max-width: 1366px) {
+@media screen and (min-width: 1023px) and (max-width: 1439px) {
 	* {
 		font-size: 12px;
 	}
@@ -3020,6 +3019,9 @@ footer hr {
 		bottom: -5px;
 		left: 0;
 		right: 0;
+	}
+	.steps .list{
+		padding-bottom: 7%;
 	}
 
 }
@@ -3131,7 +3133,9 @@ footer hr {
 		left: 0;
 		right: 0;
 	}
-
+	.steps .list{
+		padding-bottom: 7%;
+	}
 }
 
 @media screen and (min-width: 1919px) {
@@ -3229,6 +3233,7 @@ footer hr {
 		width: 50%;
 		height: auto;
 	}
+
 
 	.foot-1 {
 		display: grid;
