--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,55 @@ ol {
 	font-family: 'Montserrat', sans-serif;
 }
 
+
+.cookie-notification {
+	position: fixed;
+	background-color: rgba(9, 7, 20, 0.9);
+	bottom: 0;
+	width: 100%;
+	color: #fff;
+	padding: 1rem;
+	z-index: 999999;
+}
+
+.cookie-notification_hidden_yes {
+	display: none;
+}
+
+.cookie-notification__header {
+	margin-bottom: 0.5rem;
+	font-size: 1.5rem;
+	color: #fff;
+}
+
+.cookie-notification__body {
+	margin-bottom: 0.8rem;
+}
+
+.cookie-notification__body p{
+	color: #797979;
+	font-size: 0.87rem;
+}
+.cookie-notification__button{
+	outline: none;
+	border: none;
+	border-radius: 0.5rem;
+	padding: 1rem 2rem;
+	font-weight: 500;
+	cursor: pointer;
+	background-color: #fff;
+	color: var(--primary-color);
+}
+
+.cookie-notification__button {
+  &:hover, 
+  &:focus,
+  &:active 
+	{
+		color: var(--light-color);
+		background-color: var(--noncontrast-text-color);
+	}}
+
 /* Header*/
 
 nav {
@@ -1453,6 +1502,14 @@ footer hr {
 		padding: 0;
 	}
 
+	.div-about-1 {
+		width: 100%;
+	}
+
+	.div-about-2 {
+		width: 100%;
+	}
+
 	.about h2 {
 		margin: 0 0 3rem 0;
 	}
@@ -1471,7 +1528,7 @@ footer hr {
 		display: block;
 		width: 80%;
 		height: 80%;
-		max-width: 300px;
+		max-width: 264px;
 		resize: none;
 	}
 
@@ -1604,7 +1661,7 @@ footer hr {
 	}
 
 	.price__Mobiledescription li {
-		font-size:0.9rem;
+		font-size: 0.9rem;
 		line-height: 1rem;
 		font-weight: 400;
 		list-style-type: disc;
@@ -1691,7 +1748,8 @@ footer hr {
 		width: 100%;
 		height: 20%;
 	}
-	.portfolio__modal-content{
+
+	.portfolio__modal-content {
 		padding-top: 20%;
 	}
 
@@ -1702,6 +1760,7 @@ footer hr {
 	.portfolio__modal-close {
 		width: 7rem;
 	}
+
 	.portfolio__modal-close svg {
 		width: 5rem;
 	}
@@ -3020,7 +3079,8 @@ footer hr {
 		left: 0;
 		right: 0;
 	}
-	.steps .list{
+
+	.steps .list {
 		padding-bottom: 7%;
 	}
 
@@ -3133,7 +3193,8 @@ footer hr {
 		left: 0;
 		right: 0;
 	}
-	.steps .list{
+
+	.steps .list {
 		padding-bottom: 7%;
 	}
 }
@@ -3240,3 +3301,4 @@ footer hr {
 		grid-template-columns: 4fr 1fr 1fr 1fr;
 	}
 }
+
