--- a/styles.css
+++ b/styles.css
@@ -112,55 +112,6 @@ ol {
 	font-family: 'Montserrat', sans-serif;
 }
 
-
-.cookie-notification {
-	position: fixed;
-	background-color: rgba(9, 7, 20, 0.9);
-	bottom: 0;
-	width: 100%;
-	color: #fff;
-	padding: 1rem;
-	z-index: 999999;
-}
-
-.cookie-notification_hidden_yes {
-	display: none;
-}
-
-.cookie-notification__header {
-	margin-bottom: 0.5rem;
-	font-size: 1.5rem;
-	color: #fff;
-}
-
-.cookie-notification__body {
-	margin-bottom: 0.8rem;
-}
-
-.cookie-notification__body p{
-	color: #797979;
-	font-size: 0.87rem;
-}
-.cookie-notification__button{
-	outline: none;
-	border: none;
-	border-radius: 0.5rem;
-	padding: 1rem 2rem;
-	font-weight: 500;
-	cursor: pointer;
-	background-color: #fff;
-	color: var(--primary-color);
-}
-
-.cookie-notification__button {
-  &:hover, 
-  &:focus,
-  &:active 
-	{
-		color: var(--light-color);
-		background-color: var(--noncontrast-text-color);
-	}}
-
 /* Header*/
 
 nav {
@@ -1413,7 +1364,7 @@ footer hr {
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		transform: translate(-50%, -50%);
+		transform: translate(-50%, -60%);
 		align-self: center;
 		margin: 10% auto;
 		padding: 0;
@@ -1494,20 +1445,24 @@ footer hr {
 
 	/* ABOUT */
 	.about {
+		overflow-x: hidden; 
+		max-width: 100%;
 		margin: 0;
 		margin-top: 10rem;
 		display: grid;
 		grid-template-rows: 1fr;
-		width: 100%;
+		width: 100vw;
 		padding: 0;
 	}
 
 	.div-about-1 {
-		width: 100%;
+		width: 100vw;
+		max-width: 100%;
 	}
 
 	.div-about-2 {
-		width: 100%;
+	display: none;
+	visibility: hidden;
 	}
 
 	.about h2 {
@@ -1526,9 +1481,8 @@ footer hr {
 	.ProfilePhotoMobile {
 		margin-bottom: 10%;
 		display: block;
-		width: 80%;
-		height: 80%;
 		max-width: 264px;
+		max-height: 264px;
 		resize: none;
 	}
 
